--- a/simple-board-1/.project
+++ b/simple-board-1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>simple-board</name>
+	<name>simple-board-1</name>
 	<comment></comment>
 	<projects>
 	</projects>
